<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <EditText
        android:id="@+id/PasswordLogin"
        android:layout_width="383dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:drawableLeft="@drawable/pass_ico"
        android:drawablePadding="5dp"
        android:hint="@string/PasswordLogin"
        android:inputType="textPassword"
        android:textColorHint="#000"
        app:layout_constraintBottom_toTopOf="@+id/INGRESAR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="392dp"
        android:layout_height="36dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/Titulo"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739" />

    <EditText
        android:id="@+id/CorreoLogin"
        android:layout_width="383dp"
        android:layout_height="43dp"
        android:layout_marginBottom="44dp"
        android:drawableLeft="@drawable/user_ico"
        android:drawablePadding="5dp"
        android:hint="@string/CorreoLogin"
        android:inputType="textEmailAddress"
        android:textColorHint="#000"
        app:layout_constraintBottom_toTopOf="@+id/PasswordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="257dp"
        android:layout_height="172dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toTopOf="@+id/CorreoLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/usuario" />

    <Button
        android:id="@+id/INGRESAR"
        android:layout_width="299dp"
        android:layout_height="49dp"
        android:layout_marginBottom="44dp"
        android:text="@string/Ingresar"
        android:background="@drawable/boton_personalizado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>